<resources>
	 <string name="app_name">ToGo List</string>
	 <string name="titleHome">Never forget your Trips !</string>

	 <!--	 Sign in Activity-->
	 <string name="signin">Sign In</string>
	 <string name="createanaccount">Create an Account</string>
	 <string name="cancel">Cancel</string>
	 <string name="welcomeback">Welcome Back</string>
	 <string name="email">E-mail address</string>
	 <string name="password">Password</string>
	 <string name="forgetpassword">Forget Password ?</string>
	 <string name="sign_in_with_google">Sign In With Google</string>
	 <!--	 Sign up Activity-->
	 <string name="e_mail">Email</string>
	 <string name="welcome_to_togo_list"> Welcome to ToGo List</string>
	 <string name="sign_up">Sign Up</string>
	 <string name="username">Username</string>
	 <string name="confirmPassword">Confirm Password</string>
	 <string name="sign_up_with_google">Sign Up With Google</string>
	 <string name="privacy_policy"><![CDATA[By clicking the sign up button , you agree to our ]]></string>
	 <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
	 <string name="privacy_policybutton">Privacy Policy</string>
	 <string name="and">and</string>
	 <!--	 Forget password Activity-->
	 <string name="sorry_for_forget_your_password">We are sorry for forget your password</string>
	 <string name="forget_password">Forget Password</string>
	 <string name="please_enter_your_e_mail">please enter your e-mail</string>
	 <string name="reset_password">Reset Password</string>
	 <!--	 Add new Trip activity-->
	 <string name="add_new_trip">Add New Trip</string>
	 <string name="trip_name">Trip Name</string>
	 <string name="start_pint">Start Point</string>
	 <string name="end_point">End Point</string>
	 <string name="startdate">Start Date</string>
	 <string name="starttime">Start Time</string>
	 <string name="repetition">Repetition\n( Optional )</string>
	 <string name="daily">Daily</string>
	 <string name="weakly">Weekly</string>
	 <string name="months">Months</string>
	 <string name="saturday">Saturday</string>
	 <string name="sunday">Sunday</string>
	 <string name="monday">Monday</string>
	 <string name="tuesday">Tuesday</string>
	 <string name="wednesday">Wednesday</string>
	 <string name="thursday">Thursday</string>
	 <string name="friday">Friday</string>
	 <string name="one_direction">One Direction</string>
	 <string name="trip_type">Trip Type</string>
	 <string name="round_trip">Round Trip</string>
	 <string name="addnote">Add Note</string>
	 <string name="add">Add</string>
	 <!--	 button bar-->
	 <string name="home">Home</string>
	 <string name="user">User</string>
	 <!--	 profile activity-->
	 <string name="profile">Profile</string>
	 <string name="edit">Edit</string>
	 <string name="update">Update</string>
	 <string name="logout">Log Out</string>
	 <string name="wehope">We Hope You Will Come Back Again</string>
	 <!--	 Google API Key-->
<!--	 <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCMIF8imk5Jfi6uct4_8EPxDK-_0y7P1IA</string>-->
	<string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBUhxMP1iPC9ZqOYfRlB2d903rzqgIi_qI</string>
	<!--Dialog Activity-->
	 <string name="details">Details</string>
	 <string name="tripplace">Trip Place</string>
	 <string name="tripcalender">Trip Calender</string>
	 <string name="triptime">Trip Time</string>
	 <string name="later">Later</string>
	 <string name="start">Start</string>
	 <!--Home Activity-->
	 <string name="past_trip">Past Trip</string>
	 <string name="upcoming">Upcoming</string>
	 <string name="your_trip_details">Your Trip Details</string>
	 <string name="status">Status</string>
	 <string name="delete">Delete</string>
	 <string name="your_trips">Your Trips</string>
	 <string name="past_trips">Your Past Trips</string>
	 <string name="note">Note</string>
	 <string name="save"> Save</string>
	 <string name="errormessage">Field can\'t be empty</string>
	 <!--	 Dialog Log Out-->
	 <string name="titlelog">Really LogOut ?</string>
	 <string name="messagelog">Are you sure you want to Log Out ?</string>
	 <string name="yes">Yes</string>
	 <string name="no">No</string>
	 <!--	 Dialog Exit-->
	 <string name="titleexit">Really Exit ?</string>
	 <string name="messageexit">Are you sure you want to exit ?</string>
	 <!--	 Dialog delete-->
	 <string name="titledelete">Really Delete Trip ?</string>
	 <string name="messagedelete">Are you sure you want to delete trip ?</string>
	 <!--	 Dialog cancel-->
	 <string name="titlecancel">Really Cancel Trip ?</string>
	 <string name="messagecancel">Are you sure you want to cancel trip ?</string>
	 <!--	 Tost-->
	 <string name="emailsent">Email sent</string>
	 <string name="emailnotfound">Email not found</string>
	 <string name="messigninpleaseenter">Please Enter your Username and Password</string>
	 <string name="messigninincorrect">Your Email or Password is incorrect</string>
	 <string name="mesprofile">Please Enter New Password</string>
	 <string name="mesregisterrepeated">The password and repeated password is not the same</string>
	 <string name="mesregisterrequiredfields">Please Enter required Fields Correctly</string>
	 <string name="mesregisterdifferent">Please Try Again with different Email and Password</string>
	 <string name="messageempty">Field can not be empty</string>
	 <string name="messagelong">Username too long</string>
	 <string name="messageshort">Username too short 6 characters</string>

	 <string name="wrong_round_time">Error In Round Trip time</string>
	 <string name="wrong_start_time">Error In Start Time</string>
	 <string name="aboutapp">About App</string>
	 <string name="policytest"><b>TOGO List</b> \nToGo List built the ToGo List app as an Ad
		  Supported app. This SERVICE is provided by ToGo List at no cost and is intended for use
		  as is. This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service. If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at ToGo List unless otherwise defined in this Privacy Policy.
		  \n<b>Information Collection and Use</b> \n For a better experience, while using our
		  Service, we may require you to provide us with certain personally identifiable
		  information. The information that we request will be retained by us and used as
		  described in this privacy policy. The app does use third party services that may
		  collect information used to identify you. Link to privacy policy of third party service
		  providers used by the app \n
		  * Google Play Services\n
		  * AdMob\n
		  * Firebase Analytics\n
		  * Fabric\n
		  * Crashlytics\n
		  * Google Map\n
		  * Google Places\n
	 </string>
	 <string name="abouttext">Welcome in <b> ToGo List </b> app,\nNow you will not miss your trips. \nTo Go
		  app reminds you at the date and time. To Go will be with you during the trip through a
		  google map. You can edit and mange your upcoming trips as you like. Your trips are
		  online when logout, so you can open your account from any other android device. /n<b>
		  ToGo List </b>/nApp is developed by<b>Ali Al Fayed</b>,<b>Bassem Moustafa Mohamed</b>
		  and <b>Fatma Kamal</b>
    </string>

	 <string name="howtousepage1">Create an account and sign in to create your trips</string>
	 <string name="howtousepage2">Add Name Trip,Start Point , End Point , Start Date ,
		  Start Time And choosing your Repetition( Optional ) </string>
	 <string name="howtousepage3">Your Upcoming Trips List</string>
	 <string name="howtousepage4">Alarm to remind you for your trip time</string>
	 <string name="howtousepage5">You Can Delete Trips</string>
	 <string name="sync">Sync</string>
	 <string name="errorNewPassoword">"Password not match"</string>
	 <string name="confirmNewPassoword">"Password updated successfully"</string>
    <string name="sync_success">Synced Successfully</string>
	<string name="enter_trip_name">Please Enter Missing Data</string>
    <string name="check_connection">Please Check You Internet Connection</string>

</resources>
