<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 tools:context=".view.AddFormActivity"
	 android:background="@color/background_offwhite">

	 <androidx.constraintlayout.widget.ConstraintLayout
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content">

		  <ImageView
			   android:id="@+id/id_SplashIcon"
			   android:layout_width="30dp"
			   android:layout_height="30dp"
			   android:layout_marginBottom="36dp"
			   android:src="@drawable/planeicon"
			   app:layout_constraintBottom_toBottomOf="@+id/id_name_app4"
			   app:layout_constraintEnd_toEndOf="@+id/id_name_app4"
			   app:layout_constraintHorizontal_bias="1.0"
			   app:layout_constraintStart_toStartOf="@+id/id_name_app4" />

		  <TextView
			   android:id="@+id/id_name_app4"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="16dp"
			   android:fontFamily="@font/betterfontlogo"
			   android:text="@string/app_name"
			   android:textColor="@color/home_color"
			   android:textSize="20sp"
			   android:textStyle="bold"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintHorizontal_bias="0.498"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toTopOf="parent" />

		  <View
			   android:id="@+id/divider"
			   android:layout_width="match_parent"
			   android:layout_height="1dp"
			   android:layout_marginTop="8dp"
			   android:background="@color/colorPrimaryDark"
			   android:outlineSpotShadowColor="@color/text_shadow"
			   android:shadowDx="1"
			   android:shadowDy="1"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/id_name_app4" />

		  <ImageButton
			   android:id="@+id/btn_back_addform"
			   style="@style/Widget.AppCompat.Button.Borderless.Colored"
			   android:layout_width="70sp"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="16dp"
			   android:shadowColor="#000000"
			   android:shadowRadius="1"
			   android:src="@drawable/ic_back"
			   android:textSize="12sp"
			   app:layout_constraintEnd_toStartOf="@+id/id_name_app4"
			   app:layout_constraintHorizontal_bias="0.0"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toTopOf="parent" />

		  <TextView
			   android:id="@+id/textView2"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="16dp"
			   android:layout_marginTop="8dp"
			   android:text="@string/add_new_trip"
			   android:textColor="@color/home_color"
			   android:textStyle="bold"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/divider" />

		  <EditText
			   android:id="@+id/editText_nameTrip"
			   android:layout_width="0dp"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="10dp"
			   android:layout_marginTop="10dp"
			   android:layout_marginEnd="17dp"
			   android:ems="10"
			   android:inputType="textPersonName"
			   android:text="@string/trip_name"
			   android:textColor="@color/editText"
			   android:textColorHint="@color/colorAccent"
			   android:textSize="14sp"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/textView2" />

		  <EditText
			   android:id="@+id/editText_startPoint"
			   android:layout_width="0dp"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="8dp"
			   android:drawableEnd="@drawable/ic_search"
			   android:drawableRight="@drawable/ic_search"
			   android:ems="10"
			   android:inputType="textPersonName"
			   android:paddingEnd="10dp"
			   android:paddingRight="10dp"
			   android:text="@string/start_pint"
			   android:textColor="@color/editText"
			   android:textColorHint="@color/colorAccent"
			   android:textSize="14sp"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/editText_nameTrip" />

		  <EditText
			   android:id="@+id/editText_endPoint"
			   android:layout_width="0dp"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="16dp"
			   android:layout_marginEnd="18dp"
			   android:drawableEnd="@drawable/ic_search"
			   android:drawableRight="@drawable/ic_search"
			   android:ems="10"
			   android:inputType="textPersonName"
			   android:paddingEnd="10dp"
			   android:paddingRight="10dp"
			   android:text="@string/endpoint"
			   android:textColor="@color/editText"
			   android:textColorHint="@color/colorAccent"
			   android:textSize="14sp"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintHorizontal_bias="0.0"
			   app:layout_constraintStart_toEndOf="@+id/editText_startPoint"
			   app:layout_constraintTop_toBottomOf="@+id/editText_nameTrip" />

		  <EditText
			   android:id="@+id/editText_startDate"
			   android:layout_width="0dp"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="10dp"
			   android:layout_marginTop="8dp"
			   android:layout_marginEnd="17dp"
			   android:ems="10"
			   android:inputType="datetime"
			   android:text="@string/startdate"
			   android:textColor="@color/editText"
			   android:textColorHint="@color/colorAccent"
			   android:textSize="14sp"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/editText_startPoint" />

		  <EditText
			   android:id="@+id/editText6"
			   android:layout_width="0dp"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="10dp"
			   android:layout_marginTop="8dp"
			   android:layout_marginEnd="17dp"
			   android:ems="10"
			   android:inputType="time"
			   android:text="@string/starttime"
			   android:textColor="@color/editText"
			   android:textColorHint="@color/colorAccent"
			   android:textSize="14sp"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/editText_startDate" />

		  <TextView
			   android:id="@+id/textView4"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="16dp"
			   android:text="@string/repetition"
			   android:textColor="@color/editText"
			   android:textColorHint="@color/colorAccent"
			   android:textSize="14sp"
			   android:visibility="visible"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/editText6" />

		  <LinearLayout
			   android:id="@+id/linearLayout"
			   android:layout_width="0dp"
			   android:layout_height="25dp"
			   android:layout_marginStart="24dp"
			   android:layout_marginEnd="17dp"
			   android:orientation="horizontal"
			   android:visibility="visible"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toEndOf="@+id/textView4"
			   app:layout_constraintTop_toTopOf="@+id/textView4">


			   <RadioGroup
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal">

					<RadioButton
						 android:id="@+id/radioBtn_daily"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_weight="1"
						 android:text="@string/daily"
						 android:textColor="@color/editText"
						 android:textColorHint="@color/colorAccent"
						 android:textSize="14sp" />

					<RadioButton
						 android:id="@+id/radioBtnweakly"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_weight="1"
						 android:text="@string/weakly"
						 android:textColor="@color/editText"
						 android:textColorHint="@color/colorAccent"
						 android:textSize="14sp" />

					<RadioButton
						 android:id="@+id/radioBtnDays"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_weight="1"
						 android:text="@string/days"
						 android:textColor="@color/editText"
						 android:textColorHint="@color/colorAccent"
						 android:textSize="14sp" />


			   </RadioGroup>

		  </LinearLayout>

		  <LinearLayout
			   android:id="@+id/linearLayout4"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="200dp"
			   android:layout_marginTop="8dp"
			   android:layout_marginEnd="16dp"
			   android:orientation="vertical"
			   android:visibility="gone"
			   app:layout_constraintEnd_toEndOf="@+id/linearLayout"
			   app:layout_constraintStart_toStartOf="@+id/linearLayout"
			   app:layout_constraintTop_toBottomOf="@+id/linearLayout">

			   <CheckBox
					android:id="@+id/checkBox_saturday"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/saturday"
					android:textColor="@color/editText"
					android:textColorHint="@color/colorAccent"
					android:textSize="14sp" />

			   <CheckBox
					android:id="@+id/checkBox_Sunday"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/sunday"
					android:textColor="@color/editText"
					android:textColorHint="@color/colorAccent"
					android:textSize="14sp" />

			   <CheckBox
					android:id="@+id/checkBox_monday"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/monday"
					android:textColor="@color/editText"
					android:textColorHint="@color/colorAccent"
					android:textSize="14sp" />

			   <CheckBox
					android:id="@+id/checkBox_Tuesday"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/tuesday"
					android:textColor="@color/editText"
					android:textColorHint="@color/colorAccent"
					android:textSize="14sp" />

			   <CheckBox
					android:id="@+id/checkBox_wednesday"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/wednesday"
					android:textColor="@color/editText"
					android:textColorHint="@color/colorAccent"
					android:textSize="14sp" />

			   <CheckBox
					android:id="@+id/checkBox_Thursday"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/thursday"
					android:textColor="@color/editText"
					android:textColorHint="@color/colorAccent"
					android:textSize="14sp" />

			   <CheckBox
					android:id="@+id/checkBox_Friday"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/friday"
					android:textColor="@color/editText"
					android:textColorHint="@color/colorAccent"
					android:textSize="14sp" />
		  </LinearLayout>

		  <TextView
			   android:id="@+id/textView7"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="16dp"
			   android:layout_marginTop="14dp"
			   android:text="@string/trip_type"
			   android:textColor="@color/editText"
			   android:textColorHint="@color/colorAccent"
			   android:textSize="14sp"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

		  <LinearLayout
			   android:id="@+id/linearLayout5"
			   android:layout_width="0dp"
			   android:layout_height="30dp"
			   android:layout_marginStart="24dp"
			   android:layout_marginTop="8dp"
			   android:layout_marginEnd="17dp"
			   android:orientation="horizontal"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toEndOf="@+id/textView7"
			   app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

			   <RadioGroup
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal">

					<RadioButton
						 android:id="@+id/radioBtnOneDirection"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_weight="1"
						 android:text="@string/one_direction"
						 android:textColor="@color/editText"
						 android:textColorHint="@color/colorAccent"
						 android:textSize="14sp" />

					<RadioButton
						 android:id="@+id/radioButton5"
						 android:layout_width="wrap_content"
						 android:layout_height="wrap_content"
						 android:layout_weight="1"
						 android:text="@string/round_trip"
						 android:textColor="@color/editText"
						 android:textColorHint="@color/colorAccent"
						 android:textSize="14sp" />
			   </RadioGroup>
		  </LinearLayout>

		  <EditText
			   android:id="@+id/editText_Note"
			   android:layout_width="0dp"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="10dp"
			   android:layout_marginTop="8dp"
			   android:layout_marginEnd="17dp"
			   android:ems="10"
			   android:inputType="textPersonName"
			   android:text="@string/addnote"
			   android:textColor="@color/editText"
			   android:textColorHint="@color/colorAccent"
			   android:textSize="14sp"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

		  <Button
			   android:id="@+id/btn_add"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="50dp"
			   android:layout_marginTop="8dp"
			   android:layout_marginBottom="32dp"
			   android:background="@drawable/gradient_btn_signin"
			   android:text="@string/add"
			   android:textColor="@color/background_offwhite"
			   app:layout_constraintBottom_toBottomOf="parent"
			   app:layout_constraintStart_toStartOf="@+id/editText_Note"
			   app:layout_constraintTop_toBottomOf="@+id/editText_Note" />

		  <Button
			   android:id="@+id/btn_cancel"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginTop="8dp"
			   android:layout_marginEnd="50dp"
			   android:layout_marginBottom="32dp"
			   android:background="@drawable/gradient_btn_signup"
			   android:text="@string/cancel"
			   android:textColor="@color/background_offwhite"
			   app:layout_constraintBottom_toBottomOf="parent"
			   app:layout_constraintEnd_toEndOf="@+id/editText_Note"
			   app:layout_constraintTop_toBottomOf="@+id/editText_Note" />


	 </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>