<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 android:background="@drawable/background_signin">
	 <ImageView
		  android:id="@+id/id_SplashIcon"
		  android:layout_width="30dp"
		  android:layout_height="30dp"
		  android:layout_marginBottom="36dp"
		  android:src="@drawable/planeicon"
		  app:layout_constraintBottom_toBottomOf="@+id/id_name_app4"
		  app:layout_constraintEnd_toEndOf="@+id/id_name_app4"
		  app:layout_constraintHorizontal_bias="1.0"
		  app:layout_constraintStart_toStartOf="@+id/id_name_app4" />

	 <TextView
		  android:id="@+id/id_name_app4"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="16dp"
		  android:fontFamily="@font/betterfontlogo"
		  android:text="@string/app_name"
		  android:textColor="@color/home_color"
		  android:textSize="20sp"
		  android:textStyle="bold"
		  app:layout_constraintEnd_toEndOf="parent"
		  app:layout_constraintHorizontal_bias="0.498"
		  app:layout_constraintStart_toStartOf="parent"
		  app:layout_constraintTop_toTopOf="parent" />

	 <View
		  android:id="@+id/divider"
		  android:layout_width="match_parent"
		  android:layout_height="1dp"
		  android:layout_marginTop="8dp"
		  android:background="@color/colorPrimaryDark"
		  android:outlineSpotShadowColor="@color/text_shadow"
		  android:shadowDx="1"
		  android:shadowDy="1"
		  app:layout_constraintEnd_toEndOf="parent"
		  app:layout_constraintStart_toStartOf="parent"
		  app:layout_constraintTop_toBottomOf="@+id/id_name_app4" />

	 <Button
		  android:id="@+id/btn_Cancel_forgetPass"
		  style="@style/Widget.AppCompat.Button.Borderless.Colored"
		  android:layout_width="70sp"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="16dp"
		  android:shadowRadius="1"
		  android:shadowColor="#000000"
		  android:textSize="12sp"
		  android:text="@string/cancel"
		  android:textColor="@color/colorPrimary"
		  app:layout_constraintEnd_toStartOf="@+id/id_name_app4"
		  app:layout_constraintHorizontal_bias="0.0"
		  app:layout_constraintStart_toStartOf="parent"
		  app:layout_constraintTop_toTopOf="parent" />

	 <TextView
		  android:id="@+id/textView2"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_marginStart="16dp"
		  android:layout_marginTop="8dp"
		  android:text="@string/sorry_for_forget_your_password"
		  android:textColor="@color/home_color"
		  android:textStyle="bold"
		  app:layout_constraintStart_toStartOf="parent"
		  app:layout_constraintTop_toBottomOf="@+id/divider" />

	 <TextView
		  android:id="@+id/textView3"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="7dp"
		  android:text="@string/forget_password"
		  android:textColor="@color/colorPrimary"
		  android:textSize="29sp"
		  android:textStyle="bold"
		  app:layout_constraintStart_toStartOf="@+id/textView2"
		  app:layout_constraintTop_toBottomOf="@+id/textView2" />

	 <TextView
		  android:id="@+id/textView_email"
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:layout_marginTop="15dp"
		  android:text="@string/please_enter_your_e_mail"
		  app:layout_constraintStart_toStartOf="@+id/textView3"
		  app:layout_constraintTop_toBottomOf="@+id/textView3" />

	 <EditText
		  android:id="@+id/editText_email_forgetPass"
		  android:layout_width="378dp"
		  android:layout_height="wrap_content"
		  android:layout_marginStart="10dp"
		  android:layout_marginTop="9dp"
		  android:layout_marginEnd="17dp"
		  android:ems="10"
		  android:hint="@string/e_mail"
		  android:textColor="@color/colorAccent"
		  android:inputType="textEmailAddress"
		  app:layout_constraintEnd_toEndOf="parent"
		  app:layout_constraintHorizontal_bias="0.0"
		  app:layout_constraintStart_toStartOf="parent"
		  app:layout_constraintTop_toBottomOf="@+id/textView_email" />

	<Button
		android:id="@+id/btn__password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginStart="70dp"
		android:layout_marginTop="63dp"
		android:layout_marginEnd="70dp"
		android:background="@drawable/gradient_btn_signup"
		android:text="@string/reset_password"
		android:textColor="@color/background_offwhite"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/editText_email_forgetPass" />


</androidx.constraintlayout.widget.ConstraintLayout>