<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="wrap_content"
	 tools:context=".view.DialogActivity">

	 <androidx.constraintlayout.widget.ConstraintLayout
		  android:layout_width="match_parent"
		  android:layout_height="170dp"
		  android:layout_margin="10dp"
		  android:background="@drawable/cardbackground"
		  android:elevation="6dp"
		  >

		  <ImageButton
			   android:id="@+id/imageBtnDetails"
			   style="@style/Widget.AppCompat.Button.Borderless.Colored"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="16dp"
			   app:layout_constraintBottom_toBottomOf="parent"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toTopOf="parent"
			   app:layout_constraintVertical_bias="0.060000002"
			   app:srcCompat="@drawable/details"
			   android:background="@drawable/gradient_btn_home"/>

		  <TextView
			   android:id="@+id/textViewBtnDetails"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:text="@string/details"
			   android:textSize="18sp"
			   android:fontFamily="@font/boutfont"
			   android:textColor="@color/background_offwhite"
			   app:layout_constraintBottom_toBottomOf="@+id/imageBtnDetails"
			   app:layout_constraintEnd_toEndOf="@+id/imageBtnDetails"
			   app:layout_constraintStart_toStartOf="@+id/imageBtnDetails"
			   app:layout_constraintTop_toTopOf="@+id/imageBtnDetails" />

		  <ImageView
			   android:id="@+id/imageView"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="5dp"
			   android:layout_marginTop="20dp"
			   app:layout_constraintStart_toEndOf="@+id/imageBtnDetails"
			   app:layout_constraintTop_toTopOf="@+id/imageBtnDetails"
			   app:srcCompat="@drawable/nametrip" />

		  <ImageView
			   android:id="@+id/imageView2"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="5dp"
			   android:layout_marginTop="16dp"
			   app:layout_constraintStart_toEndOf="@+id/imageBtnDetails"
			   app:layout_constraintTop_toBottomOf="@+id/imageView"
			   app:srcCompat="@drawable/shapetrip" />

		  <ImageView
			   android:id="@+id/imageView5"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="5dp"
			   android:layout_marginTop="16dp"
			   app:layout_constraintStart_toEndOf="@+id/imageBtnDetails"
			   app:layout_constraintTop_toBottomOf="@+id/imageView2"
			   app:srcCompat="@drawable/calendar" />

		  <ImageView
			   android:id="@+id/imageView6"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="20dp"
			   app:layout_constraintStart_toEndOf="@+id/textViewPastTripCalender"
			   app:layout_constraintTop_toTopOf="@+id/imageView5"
			   app:srcCompat="@drawable/clock" />

		  <TextView
			   android:id="@+id/textViewPastTripName"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="10dp"
			   android:text="@string/trip_name"
			   android:textSize="18sp"
			   android:fontFamily="@font/boutfont"
			   app:layout_constraintBottom_toBottomOf="@+id/imageView"
			   app:layout_constraintStart_toEndOf="@+id/imageView"
			   app:layout_constraintTop_toTopOf="@+id/imageView" />

		  <TextView
			   android:id="@+id/textViewPastTripPlace"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="10dp"
			   android:text="@string/tripplace"
			   android:textSize="18sp"
			   android:fontFamily="@font/boutfont"
			   app:layout_constraintBottom_toBottomOf="@+id/imageView2"
			   app:layout_constraintStart_toEndOf="@+id/imageView2"
			   app:layout_constraintTop_toTopOf="@+id/imageView2" />

		  <TextView
			   android:id="@+id/textViewPastTripCalender"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="10dp"
			   android:text="@string/tripcalender"
			   android:textSize="18sp"
			   android:fontFamily="@font/boutfont"
			   app:layout_constraintBottom_toBottomOf="@+id/imageView5"
			   app:layout_constraintStart_toEndOf="@+id/imageView5"
			   app:layout_constraintTop_toTopOf="@+id/imageView5" />

		  <TextView
			   android:id="@+id/textViewPastTripTime"
			   android:layout_width="wrap_content"
			   android:layout_height="wrap_content"
			   android:layout_marginStart="10dp"
			   android:text="@string/triptime"
			   android:textSize="18sp"
			   android:fontFamily="@font/boutfont"
			   app:layout_constraintBottom_toBottomOf="@+id/imageView6"
			   app:layout_constraintStart_toEndOf="@+id/imageView6"
			   app:layout_constraintTop_toTopOf="@+id/imageView6" />

		  <LinearLayout
			   android:layout_width="0dp"
			   android:layout_height="60dp"
			   android:layout_marginStart="30dp"
			   android:layout_marginTop="20dp"
			   android:layout_marginEnd="30dp"
			   android:layout_marginBottom="20dp"
			   android:orientation="horizontal"
			   app:layout_constraintBottom_toBottomOf="parent"
			   app:layout_constraintEnd_toEndOf="parent"
			   app:layout_constraintHorizontal_bias="0.44"
			   app:layout_constraintStart_toStartOf="parent"
			   app:layout_constraintTop_toBottomOf="@+id/imageBtnDetails"
			   app:layout_constraintVertical_bias="0.63">

			   <Button
					android:id="@+id/btnDialogLater"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_margin="10dp"
					android:layout_weight="1"
					android:background="@drawable/gradient_btn_signin"
					android:text="@string/later"
					android:textSize="18sp"
					android:fontFamily="@font/boutfont"
					android:textColor="@color/background_offwhite" />

			   <Button
					android:id="@+id/btnDialogStart"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_margin="10dp"
					android:layout_weight="1"
					android:background="@drawable/gradient_btn_signin"
					android:text="@string/start"
					android:textSize="18sp"
					android:fontFamily="@font/boutfont"
					android:textColor="@color/background_offwhite" />

			   <Button
					android:id="@+id/btnDialogCancel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"
					android:layout_margin="10dp"
					android:layout_weight="1"
					android:background="@drawable/gradient_btn_sigup"
					android:text="@string/cancel"
					android:textSize="18sp"
					android:fontFamily="@font/boutfont"
					android:textColor="@color/background_offwhite" />
		  </LinearLayout>

	 </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>